--- a/article/referencias.bib
+++ b/article/referencias.bib
@@ -99,7 +99,7 @@ journal={2017 International Conference on Algorithms, Methodology, Models and Ap
 author={R. Schroeder and F. dos Santos},
 title={ARQUITETURA E TESTES DE SERVIÇOS WEB DE ALTO DESEMPENHO COM NODE.JS E MONGODB},
 howpublished={\url{https://www.ceavi.udesc.br/arquivos/id_submenu/787/ricardo_schroeder_versao_final_.pdf}},
-note={Acessado em: 28 de agosto de 2023}
+note={Acesso em: 28 de agosto de 2023}
 }
 
 @Article{BUGS,
@@ -132,28 +132,35 @@ journal={MICRO-48: Proceedings of the 48th International Symposium on Microarchi
 author={{Node.js Org}},
 title={The Node.js Event Loop, Timers, and process.nextTick()},
 howpublished={\url{https://nodejs.org/en/docs/guides/event-loop-timers-and-nexttick}},
-note={Acessado em: 04 de junho de 2023}
+note={Acesso em: 04 de junho de 2023}
 }
 
 @misc{NODEBLOCKEVENTLOOP,
 author={{Node.js Org}},
 title={Don't Block the Event Loop (or the Worker Pool)},
 howpublished={\url{https://nodejs.org/pt-br/docs/guides/dont-block-the-event-loop}},
-note={Acessado em: 04 de junho de 2023}
+note={Acesso em: 04 de junho de 2023}
 }
 
-@misc{NODEV8,
-author={{Node.js Dev}},
-title={The V8 JavaScript Engine},
-howpublished={\url{https://nodejs.dev/en/learn/the-v8-javascript-engine/}},
-note={Acessado em: 05 de junho de 2023}
+@misc{PYTHON,
+author={{Guido van Rossum}},
+title={Python},
+howpublished={\url{https://www.python.org}},
+note={Acesso em: 04 de agosto de 2023}
+}
+
+@misc{PANDAS,
+author={{Wes McKinney}},
+title={Pandas},
+howpublished={\url{https://pandas.pydata.org}},
+note={Acesso em: 04 de agosto de 2023}
 }
 
 @misc{BASE,
 author={Wang LL and Lo K and Chandrasekhar Y and Reas R and Yang J and Burdick D and Eide D and Funk K and Katsis Y and Kinney R and Li Y and Liu Z and Merrill W and Mooney P and Murdick D and Rishi D and Sheehan J and Shen Z and Stilson B and Wade A and Wang K and Wang NXR and Wilhelm C and Xie B and Raymond D and Weld DS and Etzioni O and Kohlmeier S},
 title={CORD-19: COVID-19 Open Research Dataset},
 howpublished={\url{https://www.kaggle.com/datasets/allen-institute-for-ai/CORD-19-research-challenge?select=metadata.csv}},
-note={Acessado em: 15 de junho de 2023}
+note={Acesso em: 15 de junho de 2023}
 }
 
 @Book{DISTRIBUTEDNODE,
