--- a/article/tcc.tex
+++ b/article/tcc.tex
@@ -649,6 +649,37 @@ criando um arquivo de saída para cada.
 	done
 \end{lstlisting}
 
+Os gráficos referentes ao consumo de recursos de máquina, como \textit{RAM} e \textit{CPU}, são
+gerados automaticamente a partir dos \textit{scripts} em \textit{Python}, 
+
+
+\begin{lstlisting}[caption={\textit{Script} base em \textit{Python} para geração de gráficos.}, label=cod:base_python]
+	def run(server, contentFileName, id=None):
+		BASE_PATH = os.path.abspath(f"../server/tmp/{server}")
+
+		df = getData(
+			fileName=f"{BASE_PATH}/{contentFileName}"
+		)
+
+		generateFig(
+			title="Gráfico Tempo X Consumo de RAM",
+			x_label="Tempo",
+			y_label="Memória (MB)",
+			fileName=f"{BASE_PATH}/memory_usage{f'_{id}' if id is not None else ''}.png",
+			x=df["timestamp"],
+			y=df["memory"]
+		)
+
+		generateFig(
+			title="Gráfico Tempo X Consumo de CPU",
+			x_label="Tempo",
+			y_label="CPU (%)",
+			fileName=f"{BASE_PATH}/cpu_usage{f'_{id}' if id is not None else ''}.png",
+			x=df["timestamp"],
+			y=df["cpu"]
+		)
+\end{lstlisting}
+
 
 \section{Resultados e discussão}
 
