Co-authored-by: Renato Ruppel <HERuppel@users.noreply.github.com>

--- a/article/referencias.bib
+++ b/article/referencias.bib
@@ -164,7 +164,7 @@ note={Acesso em: 15 de junho de 2023}
 }
 
 @Book{DISTRIBUTEDNODE,
-author={Thomas Hunter II},
+author={Thomas Hunter},
 title={Distributed Systems with Node.js},
 publisher={O'Reilly},
 year={2020},
